--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
     <div class="features-clean section">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Features</h2>
+                <h2 class="text-center">What AUG Bari is</h2>
                 <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
             </div>
             <div class="row features">
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Team </h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">We are a team of people who wanted to contribute<br>to this great community</p>
             </div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/1.jpg">
@@ -108,7 +108,7 @@
         <div class="container-fluid inpage-banner">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="text-center" style="color:rgb(255,255,255);font-style:normal;">“ The true power is in your hands... ”<br></h1>
+                    <h1 class="text-center" style="color:rgb(255,255,255);font-style:normal;">“ The power is in your hands... ”<br></h1>
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Subscribe to Newsletter</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">Get the latest news from our production center and stay tuned for all our current and future projects. Subscribe to out newsletter.<br></p>
             </div>
             <form class="form-inline" method="post">
                 <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
@@ -129,25 +129,18 @@
         <footer>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6 col-md-3 item">
-                        <h3>Services</h3>
-                        <ul>
-                            <li><a href="#">Web design</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Hosting</a></li>
-                        </ul>
-                    </div>
+                    <div class="col-sm-6 col-md-3 item"><img src="assets/img/aug.png" width="100"></div>
                     <div class="col-sm-6 col-md-3 item">
                         <h3>About</h3>
                         <ul>
-                            <li><a href="#">Company</a></li>
+                            <li></li>
                             <li><a href="#">Team</a></li>
-                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Our Projects</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
                         <h3>Arduino User Group - Bari</h3>
-                        <p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
+                        <p>The Arduino User Group, branch of Bari, is a team of engineering students guided by the passion for Arduino, Electronics and Software production. We work together to provide easy to use IoT solutions.</p>
                     </div>
                     <div class="col item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-android-mail"></i></a></div>
                 </div>
