--- a/index.html
+++ b/index.html
@@ -136,270 +136,284 @@
 					<h2 class="text-center">Team</h2>
 					<p class="text-center">We are a team of people who wanted to contribute<br>to this great community</p>
 				</div>
-				<div class="row people">
-				<!-- Team member #1 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/1.jpg">
-						<h3 class="name">Aghilar Potito</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/potitoaghilar" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
+
+				<div id="team-carousel" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#team-carousel" data-slide-to="0" class="active"></li>
+						<li data-target="#team-carousel" data-slide-to="1"></li>
+						<li data-target="#team-carousel" data-slide-to="2"></li>
+						<li data-target="#team-carousel" data-slide-to="3"></li>
+						<li data-target="#team-carousel" data-slide-to="4"></li>
+						<li data-target="#team-carousel" data-slide-to="5"></li>
+						<li data-target="#team-carousel" data-slide-to="6"></li>
+						<li data-target="#team-carousel" data-slide-to="7"></li>
+						<li data-target="#team-carousel" data-slide-to="8"></li>
+						<li data-target="#team-carousel" data-slide-to="9"></li>
+						<li data-target="#team-carousel" data-slide-to="10"></li>
+						<li data-target="#team-carousel" data-slide-to="11"></li>
+					</ol>
+					<div class="carousel-inner">
+						<!-- Team member #1 -->
+						<div class="carousel-item active">
+							<img class="rounded-circle" src="assets/img/1.jpg">
+							<h3 class="name">Aghilar Potito</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/potitoaghilar" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #2 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/2.jpg">
+							<h3 class="name">Barone Nunzio</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/Nunzio03" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #3 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/0.jpg">
+							<h3 class="name">De Palma Michele</h3>
+							<p class="title">Front-End Web Developer</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/Dev-Mikko" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #4 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/4.jpg">
+							<h3 class="name">Fiore Marco</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/mackerkun" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #5 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/0.jpg">
+							<h3 class="name">Galasso Sara</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #6 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/6.jpg">
+							<h3 class="name">Grieco Giovanni</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/corsaro" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #7 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/0.jpg">
+							<h3 class="name">Labellarte Anna</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/annalabellarte" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #8 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/0.jpg">
+							<h3 class="name">Loperfido Laura</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="#" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #9 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/9.jpg">
+							<h3 class="name">Lops Andrea</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/lopsandrea" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #10 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/10.jpg">
+							<h3 class="name">Rotolo Paolo</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="https://github.com/paolorotolo" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #11 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/0.jpg">
+							<h3 class="name">Schiavo Alessandro</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="#" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
+						</div>
+
+						<!-- Team member #12 -->
+						<div class="carousel-item">
+							<img class="rounded-circle" src="assets/img/0.jpg">
+							<h3 class="name">Sivo Antonietta</h3>
+							<p class="title">PLACEHOLDER</p>
+							<div class="social">
+								<a href="#">
+									<i class="fa fa-facebook-official"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-twitter"></i>
+								</a>
+								<a href="#" target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+								<a href="#">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</div>
 						</div>
 					</div>
 
-					<!-- Team member #2 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/2.jpg">
-						<h3 class="name">Barone Nunzio</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/Nunzio03" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #3 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/0.jpg">
-						<h3 class="name">De Palma Michele</h3>
-						<p class="title">Front-End Web Developer</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/Dev-Mikko" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #4 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/4.jpg">
-						<h3 class="name">Fiore Marco</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/mackerkun" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #5 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/0.jpg">
-						<h3 class="name">Galasso Sara</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #6 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/6.jpg">
-						<h3 class="name">Grieco Giovanni</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/corsaro" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #7 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/0.jpg">
-						<h3 class="name">Labellarte Anna</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/annalabellarte" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #8 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/0.jpg">
-						<h3 class="name">Loperfido Laura</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #9 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/9.jpg">
-						<h3 class="name">Lops Andrea</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/lopsandrea" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #10 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/10.jpg">
-						<h3 class="name">Rotolo Paolo</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="https://github.com/paolorotolo" target="_blank">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #11 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/0.jpg">
-						<h3 class="name">Schiavo Alessandro</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
-
-					<!-- Team member #12 -->
-					<div class="col-md-6 col-lg-4 item">
-						<img class="rounded-circle" src="assets/img/0.jpg">
-						<h3 class="name">Sivo Antonietta</h3>
-						<p class="title">PLACEHOLDER</p>
-						<p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa.</p>
-						<div class="social">
-							<a href="#">
-								<i class="fa fa-facebook-official"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-twitter"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-github"></i>
-							</a>
-							<a href="#">
-								<i class="fa fa-linkedin"></i>
-							</a>
-						</div>
-					</div>
+					<button class="carousel-control-prev" href="#team-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</button>
+					<button class="carousel-control-next" href="#team-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</button>
 				</div>
 			</div>
 		</div>
@@ -473,7 +487,7 @@
 							</a>
 						</div>
 					</div>
-					<p class="copyright"><strong>Arduino User Group - Bari</strong><br></p>
+					<p class="copyright"><strong>Arduino User Group - Bari<br>Designed by Potito Aghilar & Michele "Dev-Mikko" De Palma</strong><br></p>
 				</div>
 			</footer>
 		</div>
